--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.buildwithnd.demotmdb">
+    package="io.narendra.demo">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".AppClass"
+        android:name="io.narendra.demo.AppClass"
         android:theme="@style/Theme.DemoTMDB">
-        <activity android:name=".ui.details.DetailsActivity"></activity>
-        <activity android:name=".ui.listing.ListingActivity">
+        <activity android:name="io.narendra.demo.ui.details.DetailsActivity"></activity>
+        <activity android:name="io.narendra.demo.ui.listing.ListingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
